added google analytics, favicon, twitter id

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ menu:
   "Thunder Plains" : http://thunderplainsconf.com/
   "Newsletter" : http://okcjs.us4.list-manage1.com/subscribe?u=a821c039e4e223f3947115270&id=694900f2a9
   Archives: /archives
-  
+
 rss: /atom.xml
 
 # Content
@@ -23,9 +23,9 @@ widgets:
 - recent_posts
 
 # Miscellaneous
-google_analytics:
+google_analytics: UA-57887284-1
 favicon: /favicon.png
-twitter:
+twitter: okcjs
 google_plus:
 fb_admins:
 fb_app_id:
