--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,9 @@
 menu:
   Home: /
   About : /about
-  Sponsors : /sponsors
-  "Thunder Plains" : http://thunderplainsconf.com/
+  Learn: /learn
   "Newsletter" : http://okcjs.us4.list-manage1.com/subscribe?u=a821c039e4e223f3947115270&id=694900f2a9
-  Archives: /archives
+  Sponsors : /sponsors
 
 rss: /atom.xml
 
@@ -17,10 +16,10 @@ fancybox: true
 sidebar: right
 widgets:
 - category
+- recent_posts
 - tag
 - tagcloud
 - archive
-- recent_posts
 
 # Miscellaneous
 google_analytics: UA-57887284-1
